<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <EditText
                android:id="@+id/txtEmailR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:fontFamily="monospace"
                android:gravity="left"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pass"
                android:drawableLeft="@drawable/ic_pass"
                android:drawablePadding="16dp"
                android:fontFamily="monospace"
                android:gravity="left"
                android:hint="@string/password"
                android:imeOptions="actionSend|flagNoEnterAction"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="25">

            <EditText
                android:id="@+id/txtUserNameR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_id"
                android:drawablePadding="16dp"
                android:fontFamily="monospace"
                android:gravity="left"
                android:hint="@string/user_name"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="8">

            <EditText
                android:id="@+id/txtIDR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_id"
                android:drawablePadding="16dp"
                android:fontFamily="monospace"
                android:gravity="left"
                android:hint="@string/id_number"
                android:inputType="number"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="11">

            <EditText
                android:id="@+id/txtPhoneNumberR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="16dp"
                android:fontFamily="monospace"
                android:gravity="left"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/btn_Register"
        style="@style/ripple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#fff" />

    </com.balysv.materialripple.MaterialRippleLayout>


    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />


</RelativeLayout>