<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".Fragment.MenuFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/WebsiteMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    app:cardCornerRadius="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:background="@drawable/web"
                            android:padding="16dp"
                            android:src="@drawable/ic_web" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="4dp"
                            android:gravity="center_horizontal"
                            android:text="@string/website"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height=".5dp"
                            android:background="#2b2b2b" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:gravity="center_horizontal"
                            android:text="@string/view_website_institute"
                            android:textSize="14sp" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/tableMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    app:cardCornerRadius="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:background="@drawable/table"
                            android:padding="16dp"
                            android:src="@drawable/ic_table" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="4dp"
                            android:gravity="center_horizontal"
                            android:text="@string/table_s"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height=".5dp"
                            android:background="#2b2b2b" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:gravity="center_horizontal"
                            android:text="@string/table_university_hear"
                            android:textSize="14sp" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/mapMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    app:cardCornerRadius="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:background="@drawable/map"
                            android:padding="16dp"
                            android:src="@drawable/ic_map" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="4dp"
                            android:gravity="center_horizontal"
                            android:text="@string/map"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height=".5dp"
                            android:background="#2b2b2b" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:gravity="center_horizontal"
                            android:text="@string/find_us"
                            android:textSize="14sp" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/settingMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    app:cardCornerRadius="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:background="@drawable/setting"
                            android:padding="16dp"
                            android:src="@drawable/ic_setting" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="4dp"
                            android:gravity="center_horizontal"
                            android:text="@string/setting"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height=".5dp"
                            android:background="#2b2b2b" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:gravity="center_horizontal"
                            android:text="@string/change_book_setting"
                            android:textSize="14sp" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    app:cardCornerRadius="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:background="@drawable/language"
                            android:padding="16dp"
                            android:src="@drawable/ic_lang" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="4dp"
                            android:gravity="center_horizontal"
                            android:text="@string/language"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height=".5dp"
                            android:background="#2b2b2b" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:gravity="center_horizontal"
                            android:text="@string/arabic_english"
                            android:textSize="14sp" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/logoutMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    app:cardCornerRadius="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:background="@drawable/logout"
                            android:padding="16dp"
                            android:src="@drawable/ic_logout" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="4dp"
                            android:gravity="center_horizontal"
                            android:text="@string/logout"
                            android:textSize="18sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height=".5dp"
                            android:background="#2b2b2b" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:gravity="center_horizontal"
                            android:text="@string/exit_the_program"
                            android:textSize="14sp" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>