<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoLogin"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/emotatwera"
                android:textSize="18sp"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/colorAccent"
                app:counterEnabled="true"
                app:counterMaxLength="254">

                <EditText
                    android:id="@+id/txtEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="16dp"
                    android:fontFamily="monospace"
                    android:gravity="left"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="254"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorAccent"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/txtPassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawableLeft="@drawable/ic_pass"
                    android:drawablePadding="16dp"
                    android:fontFamily="monospace"
                    android:gravity="left"
                    android:hint="@string/password"
                    android:imeOptions="actionSend|flagNoEnterAction"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="18sp" />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="8dp"
                android:src="@drawable/ic_login"
                app:backgroundTint="@color/colorPrimary" />


            <TextView
                android:id="@+id/btnRegisterLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/create_new_account"
                android:textColor="@color/b2b2b2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="gone" />


</RelativeLayout>